--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   barcode_scan: ^2.0.1
   table_calendar: ^2.2.3
+  shared_preferences:
 
 
   # The following adds the Cupertino Icons font to your application.
